--- a/index.html
+++ b/index.html
@@ -4,31 +4,37 @@
     <meta charset="UTF-8">
     <title>ClearBit Demo</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   </head>
   <body>
-    <h1>ClearBit Demo</h1>
-    <form action="#" id="clearbitForm">
-      <input type="text" placeholder="Stalk someone" id="clearbitEmail">
-      <input type="submit" id="clearbitSubmit">
-    </form>
-    <table>
-      <tr>
-        <td>Name</td>
-        <td id="userName"></td>
-      </tr>
-      <tr>
-        <td>Email</td>
-        <td id="userEmail"></td>
-      </tr>
-      <tr>
-        <td>Bio</td>
-        <td id="userBio"></td>
-      </tr>
-      <tr>
-        <td>Location</td>
-        <td id="userLocation"></td>
-      </tr>
-    </table>
+    <div class="container" id="user-info">
+      <h1>ClearBit Demo</h1>
+      <form action="#" id="clearbitForm">
+        <input type="text" placeholder="Stalk someone" id="clearbitEmail">
+        <input type="submit" id="clearbitSubmit">
+      </form>
+      <table>
+        <tr>
+          <td>Name</td>
+          <td id="userName"></td>
+        </tr>
+        <tr>
+          <td>Email</td>
+          <td id="userEmail"></td>
+        </tr>
+        <tr>
+          <td>Bio</td>
+          <td id="userBio"></td>
+        </tr>
+        <tr>
+          <td>Location</td>
+          <td id="userLocation"></td>
+        </tr>
+      </table>
+
+      <!-- image -->
+    </div>
     <script src="build/application.js"></script>
   </body>
 </html>
